2009-05-18  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff Garen.

        - Improve code generation for access to prototype properties
        
        ~0.4% speedup on SunSpider.
        
        Based on a suggestion from Geoff Garen.

        * jit/JIT.h:
        * jit/JITPropertyAccess.cpp:
        (JSC::JIT::compileGetDirectOffset):
        (JSC::JIT::privateCompileGetByIdProto):
        (JSC::JIT::privateCompileGetByIdProtoList):
        (JSC::JIT::privateCompileGetByIdChainList):
        (JSC::JIT::privateCompileGetByIdChain):

2009-05-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Gavin Barraclough.

        Enable YARR, and disable WREC for GTK+.

        * GNUmakefile.am:
        * yarr/RegexParser.h:

2009-05-18  Jan Michael Alonzo  <jmalonzo@webkit.org>

         Reviewed by Xan Lopez.

         [Gtk] Various autotools build refactoring and fixes
         https://bugs.webkit.org/show_bug.cgi?id=25286

         Add -no-install and -no-fast-install to programs and tests that we
         don't install. Also remove -O2 since this is already handled at
         configure time.

         * GNUmakefile.am:

2009-05-17  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Xan Lopez.

        [Gtk] Various autotools build refactoring and fixes
        https://bugs.webkit.org/show_bug.cgi?id=25286

        Add JavaScriptCore/ to JSC include path only since it's not
        required when building WebCore.

        * GNUmakefile.am:

2009-05-17  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix

        * JavaScriptCore.vcproj/JavaScriptCore.make:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:

2009-05-15  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Looking like MSVC doesn't like static variables in inline methods?
        Make the state of the SSE2 check a static variable on the class